remove some deprecated code